--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compileOnly 'commons-io:commons-io:2.11.0'
+	implementation group: 'org.json', name: 'json', version: '20220320'
 }
 
 tasks.named('test') {
